# rpm-vec

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download-model.sh  sync-config.toml  test_mcp.sh
docs/: CHANGELOG.md  COMPRESSION.md  DEVELOPMENT.md  MCP_GUIDE.md  README.md  SQLITE_VEC_BUNDLING.md  SYNC_GUIDE.md  USAGE.md
docs/design/: rpm_repo_vector_search_design.md  rpm_repo_vector_search_detailed_design.md
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: search.rs
src/embedding/: embed.rs  hub.rs  mod.rs  model.rs
src/gbs/: config.rs  mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/normalize/: mod.rs  package.rs  version.rs
src/repomd/: fetch.rs  filelists_parser.rs  mod.rs  model.rs  parser.rs
src/search/: mod.rs  planner.rs  semantic.rs  structured.rs
src/storage/: mod.rs  schema.rs  sqlite.rs  vector.rs
src/sync/: config.rs  mod.rs  scheduler.rs  state.rs  syncer.rs
tests/: test_compression.rs
