[package]
name = "rpm_repo_search"
version = "0.9.0"
edition = "2021"

[dependencies]
# XML 파싱
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite (bundled version for portability)
rusqlite = { version = "0.38", features = ["bundled"] }

# Embedding (included by default)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.4", features = ["rustls-tls"], default-features = false, optional = true }

# GPU acceleration for candle (optional)
cudarc = { version = "0.12", optional = true }

# 데이터 압축
flate2 = "1.1"
zstd = "0.13"

# 에러 처리
anyhow = "1.0"
thiserror = "2.0"

# Unix system calls
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP 서버 (optional)
tokio = { version = "1.49", features = ["full"], optional = true }

# 자동 동기화 (optional)
reqwest = { version = "0.13", features = ["blocking"], optional = true }
toml = { version = "0.9", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# sqlite-vec (static bundling, optional)
sqlite-vec = { version = "0.1.6", optional = true }

[features]
default = ["embedding", "sync"]
embedding = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub", "sqlite-vec"]
mcp = ["tokio"]
sync = ["tokio", "reqwest", "toml", "chrono"]

# GPU acceleration (optional - will fallback to CPU if unavailable)
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "cudarc", "cudarc/cuda-12000"]
accelerate = ["candle-core/accelerate"]
