[package]
name = "rpm_repo_search"
version = "0.9.0"
edition = "2021"

[dependencies]
# XML parsing
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite (bundled version for portability)
rusqlite = { version = "0.38", features = ["bundled"] }
# sqlite-vec
sqlite-vec = "0.1.6"

# Embedding
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"

# GPU acceleration for candle (optional)
cudarc = { version = "0.12", optional = true }

flate2 = "1.1"
zstd = "0.13"

anyhow = "1.0"
thiserror = "2.0"

# Unix system calls
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP server (optional)
tokio = { version = "1.49", features = ["full"] }

# Sync
reqwest = { version = "0.13", features = ["blocking"] }
toml = { version = "0.9" }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
mcp = []

# GPU acceleration (optional - will fallback to CPU if unavailable)
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "cudarc", "cudarc/cuda-12000"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
