[package]
name = "rpm_repo_search"
version = "0.9.0"
edition = "2021"

[dependencies]
# XML parsing
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite (bundled version for portability)
rusqlite = { version = "0.38", features = ["bundled"] }
# sqlite-vec (optional - only for vector search)
sqlite-vec = { version = "0.1.6", optional = true }

# Embedding (optional)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }

# GPU acceleration for candle (optional)
cudarc = { version = "0.12", optional = true }

flate2 = "1.1"
zstd = "0.13"

anyhow = "1.0"
thiserror = "2.0"

# Unix system calls
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async / MCP server (optional - only needed for daemon/embedding binary)
tokio = { version = "1.49", features = ["full"], optional = true }

# Sync
ureq = { version = "3", features = ["platform-verifier"] }
toml = { version = "0.9" }
chrono = { version = "0.4", features = ["serde"] }

# GBS config parsing
rust-ini = "0.21"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[features]
default = ["embedding"]

# Embedding / vector search support
embedding = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:sqlite-vec",
    "dep:tokio",
]

# GPU acceleration (optional - will fallback to CPU if unavailable)
cuda = ["embedding", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "cudarc", "cudarc/cuda-12000"]
accelerate = ["embedding", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[[bin]]
name = "rpm_repo_search"
path = "src/main.rs"

[[bin]]
name = "dpa_repoquery"
path = "src/bin/dpa_repoquery.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

# Size-optimized release profile: cargo build --profile release-small
[profile.release-small]
inherits = "release"
opt-level = "z"
